458 fix - sidepanel footer gradient on mobile

--- a/app/react/Layout/scss/sidepanel.scss
+++ b/app/react/Layout/scss/sidepanel.scss
@@ -190,7 +190,11 @@ $c-sidebar: $c-white;
   right: 15px;
   padding: 0 0 30px;
   text-align: center;
-  background: linear-gradient(transparent 0%, $c-white 70%, $c-white 100%);
+  background: transparentize($c-white, .9);
+  background: -webkit-linear-gradient(transparent 0%, $c-white 70%, $c-white 100%);
+  background:      -o-linear-gradient(transparent 0%, $c-white 70%, $c-white 100%);
+  background:    -moz-linear-gradient(transparent 0%, $c-white 70%, $c-white 100%);
+  background:         linear-gradient(transparent 0%, $c-white 70%, $c-white 100%);
 
   .btn {
     position: relative;
